[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "google-genai>=1.29.0",
    "google-generativeai>=0.8.5",
    "numpy>=2.3.2",
    "openai>=1.99.6",
    "pandas>=2.3.1",
    "pdfplumber>=0.11.7",
    "plotly>=6.2.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "sift-stack-py>=0.8.2",
    "streamlit>=1.48.0",
    "yfinance>=0.2.65",
]
